# algorithm-test

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  algorithm-test.sln  main.cpp  main.csproj
cppResolve/: 0-common.h  0001-twosum.cpp  0002-addTwoNumbers.cpp  0003-lengthOfLongestSubstring.cpp  0005-longestPalindrome.cpp  0007-reverse.cpp  0009-isPalindrome.cpp  0011-maxArea.cpp  0014-longestCommonPrefix.cpp  0035-searchInsert.cpp  0042-trap.cpp  0048-rotate.cpp  0049-groupAnagrams.cpp  0053-maxSubArray.cpp  0055-canJump.cpp  0056-merge.cpp  0062-uniquePaths.cpp  0064-minPathSum.cpp  0070-climbStairs.cpp  0073-setZeroes.cpp  0075-sortColors.cpp  0094-Solution.cpp  0118-YHgenerate.cpp  0121-maxProfit.cpp  0124-maxPathSum.cpp  0128-longestConsecutive.cpp  0136-singleNumber.cpp  0139-wordBreak.cpp  0146-LRUCache.cpp  0152-maxProduct.cpp  0169-majorityElement.cpp  0189-rotate.cpp  0198-rob.cpp  0217-containsDuplicate.cpp  0230-kthSmallest.cpp  0239-maxSlidingWindow.cpp  0268-missingNumber.cpp  0279-numSquares.cpp  0283-moveZeroes.cpp  0300-lengthOfLIS.cpp  (+14 more)
csharpResolve/: CommonStruct.cs  ResolveClass1.cs  main.cs
pythonResolve/: Common.py  CommonTest.py  Main.py  Solution1.py  Solution2.py  Solution3.py
test/: test.cpp
